Setup webpack and babel for Javascript workflow

--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "travel-site",
   "version": "1.0.0",
+  "scripts": {
+    "webpack": "webpack",
+    "watch": "gulp watch"
+  },
   "dependencies": {
     "jquery": "3.2.1",
     "jquery-smooth-scroll": "2.2.0",
@@ -29,10 +33,10 @@
     "gulp-usemin": "0.3.28",
     "gulp-watch": "4.3.11",
     "postcss-hexrgba": "1.0.0",
-    "postcss-import": "11.0.0",
+    "postcss-import": "^11.0.0",
     "postcss-mixins": "6.2.0",
     "postcss-nested": "2.1.2",
     "postcss-simple-vars": "4.1.0",
-    "webpack": "3.8.1"
+    "webpack": "^3.8.1"
   }
 }
