--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "jquery-smooth-scroll": "2.2.0",
     "lazysizes": "4.0.1",
     "normalize.css": "7.0.0",
+    "particles.js": "^2.0.0",
     "picturefill": "3.0.2",
     "waypoints": "4.0.1"
   },
