--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lazysizes": "4.0.1",
     "normalize.css": "7.0.0",
     "picturefill": "3.0.2",
+    "simplebar": "^5.3.0",
     "waypoints": "4.0.1"
   },
   "devDependencies": {
