--- a/package.json
+++ b/package.json
@@ -1,24 +1,19 @@
 {
-  "name": "travel-site",
+  "name": "portfolio-website",
   "version": "1.0.0",
   "scripts": {
     "webpack": "webpack",
     "watch": "gulp watch"
   },
   "dependencies": {
-    "jquery": "3.2.1",
-    "jquery-smooth-scroll": "2.2.0",
-    "lazysizes": "4.0.1",
     "normalize.css": "7.0.0",
-    "picturefill": "3.0.2",
-    "simplebar": "^5.3.0",
-    "waypoints": "4.0.1"
+    "simplebar": "^5.3.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.13.1",
+    "@babel/preset-env": "^7.13.5",
     "autoprefixer": "7.1.6",
-    "babel-core": "6.26.0",
-    "babel-loader": "7.1.2",
-    "babel-preset-es2015": "6.24.1",
+    "babel-loader": "^8.2.2",
     "browser-sync": "2.18.13",
     "del": "3.0.0",
     "gulp": "3.9.1",
@@ -38,6 +33,6 @@
     "postcss-mixins": "6.2.0",
     "postcss-nested": "2.1.2",
     "postcss-simple-vars": "4.1.0",
-    "webpack": "^3.8.1"
+    "webpack": "^5.24.2"
   }
 }
